added portfolio content

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,20 @@
 /* Tiny reset thingy */
 body,html{margin:0;padding:0;}
+h1 {
+    color: white;
+}
 
+.grey {
+    color: gray;
+}
+
+.light-grey {
+    color: lightgray;
+}
+
+img {
+    height: 300px;
+}
 .wrapper {
   /* The height needs to be set to a fixed value for the effect to work.
    * 100vh is the full height of the viewport. */
@@ -52,11 +66,11 @@ body,html{margin:0;padding:0;}
 
 /* Sets the actual background images to adorable kitties. This part is crucial. */
 .bg1::after {
-  background-image: url("https://i.imgur.com/1fRDDMF.jpg");
+  background-image: url("https://i.imgur.com/lPl9WEQ.jpg");
 }
 
 .bg2::after {
-  background-image: url("https://i.imgur.com/Arz8EkS.png");
+  background-image: url("https://i.imgur.com/nVSDMEn.jpg");
 }
 
 .bg3::after {
