--- a/css/main.css
+++ b/css/main.css
@@ -1,84 +1,62 @@
-/* Tiny reset thingy */
-
-body,html{margin:0;padding:0;}
-
-img {
-    width: 100%;
+/* Template Stylesheet */
+/**
+ * Made By MaterializeCSS.com
+ */
+ img {
+  width: 100%;
 }
-.wrapper {
-  /* The height needs to be set to a fixed value for the effect to work.
-   * 100vh is the full height of the viewport. */
-  height: 100vh;
-  /* The scaling of the images would add a horizontal scrollbar, so disable x overflow. */
-  overflow-x: hidden;
-  /* Enable scrolling on the page. */
-  overflow-y: auto;
-  /* Set the perspective to 2px. This is essentailly the simulated distance from the viewport to transformed objects.*/
-  perspective: 2px;
-}
+ nav ul a,
+ nav .brand-logo {
+   color: #444;
+ }
+ 
+ p {
+   line-height: 2rem;
+ }
+ 
+ .sidenav-trigger {
+   color:grey;
+ }
+ 
+ .parallax-container {
+   min-height: 100vh;
+   line-height: 0;
+   height: auto;
+   color: rgba(255,255,255,.9);
+ }
+   .parallax-container .section {
+     width: 100%;
+   }
+ 
+ @media only screen and (max-width : 992px) {
+   .parallax-container .section {
+     position: absolute;
+     top: 40%;
+     min-height: 300px;
+   }
+   #index-banner .section {
+     top: 10%;
+   }
+ }
+ 
+ @media only screen and (max-width : 600px) {
+   #index-banner .section {
+     top: 0;
+   }
+ }
+ 
+ .icon-block {
+   padding: 0 15px;
+ }
+ .icon-block .material-icons {
+   font-size: inherit;
+ }
+ 
+ footer.page-footer {
+   margin: 0;
+ }
 
-.section {
-  /* Needed for children to be absolutely positioned relative to the parent. */
-  position: relative;
-  /* The height of the container. Must be set, but it doesn't really matter what the value is. */
-  height: 100vh;
-  
-  /* For text formatting. */
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  /* color:white; */
-}
-
-.parallax::after {
-  /* Display and position the pseudo-element */
-  content: " ";
-  position: absolute;
-  top: 0;
-  right: 0;
-  bottom: 0;
-  left: 0;
-  
-  /* Move the pseudo-element back away from the camera,
-   * then scale it back up to fill the viewport.
-   * Because the pseudo-element is further away, it appears to move more slowly, like in real life. */
-  transform: translateZ(-1px) scale(1.5);
-  /* Force the background image to fill the whole element. */
-  background-size: 100%;
-  /* Keep the image from overlapping sibling elements. */ 
-  z-index: -1;
-}
-
-/* The styling for the static div. */
-.static {
-  background: white;
-}
-
-/* Sets the actual background images to adorable kitties. This part is crucial. */
-
-.bg1 {
-    color: white;
-}
-.bg1::after {
-  background-image: url("https://i.imgur.com/zKWv7oY.jpg");
-}
-
-.bg2 {
-    color: white;
-}
-
-.bg3 {
-    height: 100vh;
-}
-
-.bg2::after {
-  background-image: url("https://i.imgur.com/DRJgZPA.jpg");
-}
-
-.bg3::after {
-    background-image: url("https://i.imgur.com/uVEcTf1.jpg");
-  }
-
-  .portfolio-content {
-    height: 400vh;
-  }
+ .anchor {
+   padding-top: 64px;
+   margin-top: -64px;
+ }
