--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,8 @@
 /**
  * Made By MaterializeCSS.com
  */
+
+
  img {
   width: 100%;
 }
@@ -59,4 +61,9 @@
  .anchor {
    padding-top: 64px;
    margin-top: -64px;
+ }
+
+ #about {
+   height: 100vh;
+   display: table-cell;
  }
