--- a/css/main.css
+++ b/css/main.css
@@ -1,62 +1,127 @@
-/* Template Stylesheet */
-/**
- * Made By MaterializeCSS.com
- */
-
- .header {
-  padding-top: 30%;
+h1 {
+  color: white;
 }
-nav ul a,
-nav .brand-logo {
-  color: #444;
-}
-
-p {
-  line-height: 2rem;
+.parallax {
+  height: 500px; /* fallback for older browsers */
+  height: 100vh;
+  overflow-x: hidden;
+  overflow-y: auto;
+  -webkit-perspective: 300px;
+  perspective: 300px;
 }
 
-.sidenav-trigger {
-  color: #26a69a;
+.parallax__group {
+  position: relative;
+  height: 500px; /* fallback for older browsers */
+  height: 100vh;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
 
-.parallax-container {
-  min-height: 100vh;
-  line-height: 0;
-  height: auto;
-  color: rgba(255,255,255,.9);
-}
-  .parallax-container .section {
-    width: 100%;
-  }
-
-@media only screen and (max-width : 992px) {
-  .parallax-container .section {
-    position: absolute;
-    top: 40%;
-  }
-  #index-banner .section {
-    top: 10%;
-  }
+.parallax__group_footer {
+  position: relative;
+  height: 30vh;
+  -webkit-transform-style: preserve-3d;
+  transform-style: preserve-3d;
 }
 
-@media only screen and (max-width : 600px) {
-  #index-banner .section {
-    top: 0;
-  }
+.tech {
+  color: white;
 }
 
-.icon-block {
-  padding: 0 15px;
-}
-.icon-block .material-icons {
-  font-size: inherit;
+
+.parallax__layer {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
 
-footer.page-footer {
-  margin: 0;
+.parallax__layer--base {
+  -webkit-transform: translateZ(0);
+  transform: translateZ(0);
+  z-index: 5;
 }
 
-.anchor {
-  padding-top: 64px;
-  margin-top: -64px;
+.parallax__layer--back {
+  -webkit-transform: translateZ(-300px) scale(2);
+  transform: translateZ(-300px) scale(2);
+  z-index: 4;
 }
+
+
+.parallax__group {
+  -webkit-transition: -webkit-transform 0.5s;
+  transition: transform 0.5s;
+}
+
+.portfolio-imgs {
+  width: 50%;
+
+}
+
+
+/* demo styles
+--------------------------------------------- */
+
+/* body, html {
+  overflow: hidden;
+} */
+
+* {
+  margin:0;
+  padding:0;
+}
+
+ /* centre the content in the parallax layers */
+.centre {
+  text-align: center;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  -webkit-transform: translate(-50%, -50%);
+  transform: translate(-50%, -50%);
+}
+
+
+
+/* style the groups
+--------------------------------------------- */
+
+#group1 {
+  z-index: 1; /* slide under group 2 */
+}
+#group1 .parallax__layer--back {
+  background-image: url("https://i.imgur.com/XCDH7Ud.jpg");
+}
+
+#group2 {
+  z-index: 2; /* slide over groups 1 and 3 */
+}
+#group2 .parallax__layer--base {
+  background-color: white;
+}
+
+#group3 {
+  z-index: 1; /* slide under group 2 and 4 */
+}
+#group3 .parallax__layer--back {
+  background-image: url("https://i.imgur.com/XCDH7Ud.jpg");
+}
+
+#group4 {
+  z-index: 2; /* slide over group 3 and 5 */
+}
+#group4 .parallax__layer--base {
+  background-color: white;
+}
+
+#group5 {
+  z-index: 1; /* slide over group 4 and 6 */
+}
+#group5 .parallax__layer--back {
+  background-image: url("https://i.imgur.com/XCDH7Ud.jpg");
+}
+
+
